feat: auth added.
fixed: show authorization header in swagger
