# ecommerce/src/product/routes/categories.js
@@ -4,6 +4,18 @@ const {categoryIdValidation, categoryNameValidation, categoryParentValidation, c
 const {checkValidationPassed} = require('../../middlewares/chackValidationPassed');
 
 router.post('/', [categoryNameValidation, categoryParentValidation, categoryAttributesValidation], checkValidationPassed, categoryController.createCategory);
+/**
+ * @swagger
+ * /api/v1/categories:
+ *   get:
+ *     summary: Example route
+ *     description: This is a sample route.
+ *     security:
+ *       - BearerAuth: []
+ *     responses:
+ *       200:
+ *         description: Success
+ */
 router.get('/', categoryController.getAllCategories);
 router.get('/:categoryId', categoryIdValidation, checkValidationPassed, categoryController.getCategoryById);
 router.put('/:categoryId', [categoryIdValidation, categoryNameValidation, categoryParentValidation, categoryAttributesValidation], checkValidationPassed, categoryController.updateCategory);
